--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <span class="d-none d-lg-block"><img class="img-profile rounded-circle" style="width: auto; height: auto; max-width: 40em; max-height:30em;" src="assets/img/profile.jpg" alt="" /></span><br>
+                    <span class="d-none d-lg-block"><img class="img-profile rounded-circle" style="width: auto; height: auto; max-width: 40em; max-height:30em;" src="img/profile.jpg" alt="" /></span><br>
                     <h1 class="mb-0">
                         박
                         <span class="text-primary">용호</span>
                     </h1>
                     <div class="subheading mb-5">
-                        E-Mail : <a href="">poh1852@naver.com</a>
+                        E-Mail : <a href="">poh1852@naver.com</a><br>
                         Birth : poh1852@naver.com<br>
                         Phone : 010 - 2521 - 8674
                     </div>
@@ -59,7 +59,7 @@
                         <li class="style3">
                             <span class="image">
                                 <a href="http://legend-by.kro.kr/lms/" target="_blank">
-                                    <img style="width: auto; height: auto; max-width: 50em; max-height:30em;" src="assets/img/test.PNG" alt="" />
+                                    <img style="width: auto; height: auto; max-width: 50em; max-height:30em;" src="img/test.PNG" alt="" />
                                 </a>
                             </span>
                             <p style="text-align: left;">
@@ -81,7 +81,7 @@
                         <li class="style3">
                             <span class="image">
                                 <a href="http://dragonho.kro.kr/cash/" target="_blank">
-                                    <img style="width: auto; height: auto; max-width: 50em; max-height:30em;" src="assets/img/cash.PNG" alt="" />
+                                    <img style="width: auto; height: auto; max-width: 50em; max-height:30em;" src="img/cash.PNG" alt="" />
                                 </a>
                             </span>
                             <p style="text-align: left;">
@@ -99,7 +99,7 @@
                         <li class="style3">
                             <span class="image">
                                 <a href="http://dragonho.kro.kr/mall/login/login.jsp" target="_blank">
-                                    <img style="width: auto; height: auto; max-width: 50em; max-height:30em;" src="assets/img/mall.PNG" alt="" />
+                                    <img style="width: auto; height: auto; max-width: 50em; max-height:30em;" src="img/mall.PNG" alt="" />
                                 </a>
                             </span>
                             <p style="text-align: left;">
@@ -117,7 +117,7 @@
                         <li class="style3">
                             <span class="image">
                                 <a href="http://dragonho.kro.kr/mall-admin/login.jsp" target="_blank">
-                                    <img style="width: auto; height: auto; max-width: 50em; max-height:30em;" src="assets/img/mall-admin.PNG" alt="" />
+                                    <img style="width: auto; height: auto; max-width: 50em; max-height:30em;" src="img/mall-admin.PNG" alt="" />
                                 </a>
                             </span>
                             <p style="text-align: left;">
