--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         <!-- Page Content-->
             <!-- About-->
             <section class="resume-section" id="about">
+                <span class="d-none d-lg-block"><img class="img-profile rounded-circle" style="width: auto; height: auto; max-width: 40em; max-height:30em;" src="img/profile.jpg" alt="" /></span>
                 <div class="resume-section-content">
-                    <span class="d-none d-lg-block"><img class="img-profile rounded-circle" style="width: auto; height: auto; max-width: 40em; max-height:30em;" src="img/profile.jpg" alt="" /></span><br>
+                    <br>
                     <h1 class="mb-0">
                         박
                         <span class="text-primary">용호</span>
