인적사항 수정

--- a/index.html
+++ b/index.html
@@ -34,16 +34,15 @@
         <!-- Page Content-->
             <!-- About-->
             <section class="resume-section" id="about">
-                <span class="d-none d-lg-block"><img class="img-profile rounded-circle" style="width: auto; height: auto; max-width: 40em; max-height:30em;" src="img/profile.jpg" alt="" /></span>
+                <span class="d-none d-lg-block"><img class="img-profile rounded-circle" style="width: auto; height: auto; max-width: 40em; max-height:30em;" src="img/profile.jpg" alt="" /></span><br>
                 <div class="resume-section-content">
-                    <br>
                     <h1 class="mb-0">
                         박
                         <span class="text-primary">용호</span>
                     </h1>
                     <div class="subheading mb-5">
                         E-Mail : <a href="">poh1852@naver.com</a><br>
-                        Birth : poh1852@naver.com<br>
+                        Birth : 1997.08.24<br>
                         Phone : 010 - 2521 - 8674
                     </div>
                     <p class="lead mb-20">항상 발전해 나가는 개발자 박용호입니다.</p>
