--- a/index.html
+++ b/index.html
@@ -40,11 +40,32 @@
                         박
                         <span class="text-primary">용호</span>
                     </h1>
-                    <div class="subheading mb-5">
-                        E-Mail : <a href="">poh1852@naver.com</a><br>
-                        Birth : 1997.08.24<br>
-                        Phone : 010 - 2521 - 8674
-                    </div>
+                    <table>
+                        <tr>
+                            <th>
+                                E-Mail
+                            </th>
+                            <td class="subheading mb-5">
+                                <a href="">poh1852@naver.com</a><br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Birth
+                            </th>
+                            <td>
+                                1997.08.24
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Phone
+                            </th>
+                            <td>
+                                010 - 2521 - 8674
+                            </td>
+                        </tr>
+                    </table>
                     <p class="lead mb-20">항상 발전해 나가는 개발자 박용호입니다.</p>
                 </div>
             </section>
