--- a/index.html
+++ b/index.html
@@ -35,38 +35,20 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <span class="d-none d-lg-block"><img class="img-profile rounded-circle" style="width: auto; height: auto; max-width: 40em; max-height:30em;" src="img/profile.jpg" alt="" /></span><br>
+                <ul class="statistics">
+											
+                </ul>
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         박
                         <span class="text-primary">용호</span>
                     </h1>
-                    <table>
-                        <tr>
-                            <th>
-                                E-Mail
-                            </th>
-                            <td class="subheading mb-5">
-                                <a href="">poh1852@naver.com</a><br>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>
-                                Birth
-                            </th>
-                            <td>
-                                1997.08.24
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>
-                                Phone
-                            </th>
-                            <td>
-                                010 - 2521 - 8674
-                            </td>
-                        </tr>
-                    </table>
-                    <p class="lead mb-20">항상 발전해 나가는 개발자 박용호입니다.</p>
+                    <div class="subheading mb-5">
+                        E-Mail : <a href="">poh1852@naver.com</a><br>
+                        Birth : 1997.08.24<br>
+                        Phone : 010 - 2521 - 8674
+                    </div>
+                    <p class="lead mb-20" style="font-size: 1.5em;">항상 발전해 나가는 개발자 박용호입니다.</p>
                 </div>
             </section>
             <hr class="m-0" />
