--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         Birth : 1997.08.24<br>
                         Phone : 010 - 2521 - 8674
                     </div>
-                    <p class="lead mb-20" style="font-size: 1.5em;">항상 발전해 나가는 개발자 박용호입니다.</p>
+                    <p class="lead mb-20" style="font-size: 1.5em;">항상 발전해 나가는 신입개발자 박용호입니다.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -77,6 +77,7 @@
                                 LMS는 교육 과정, 학습 및 개발 프로그램을 관리하고, 기록하고, 종합 보고서를 
                             </p>
                         </li>
+                        <br><br>
                         <div>
                             <h3>개인 프로젝트</h3>
                         </div>
@@ -98,6 +99,7 @@
                                 Spring Boot, Mybatis, RestController, AJax등을 활용한 가계부 프로그램으로 자바 웹 프레임워크 수업 후 2주일간 진행한 프로젝트입니다.
                             </p>
                         </li>
+                        <hr>
                         <!-- mall 프로젝트(사용자) -->
                         <li class="style3">
                             <span class="image">
@@ -116,6 +118,7 @@
                                 Model 1 기법으로 만든 쇼핑몰 프로젝트로 Servlet, Filter, Listener, Session, RDBMS 수업 후 일주일간 진행한 미니프로젝트입니다.<br>
                             </p>
                         </li>
+                        <hr>
                         <!-- mall 프로젝트(관리자) -->
                         <li class="style3">
                             <span class="image">
