프로젝트 내용 추가

--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
                             </span>
                             <p style="text-align: left;">
                                 <h3>LMS 프로젝트</h3>
-                                <a href="https://github.com/goodee-project/LMS-Z" target="_blank">[GitHub 주소]</a>
+                                <a href="https://github.com/goodee-project/LMS-Z" target="_blank">[GitHub 주소]</a><a href="http://legend-by.kro.kr/lms/" target="_blank">[LMS]</a>
                                 <hr>
                                 프로젝트 방식 : Spring MVC
                                 <br>
                                 사용 프로그램 : Eclipse, Spring-tool-suite, Mariadb
                                 <hr>
                                 LMS 프로젝트로 기획, 설계, 구현, 테스트 포함 2개월 동안 Spring Boot를 이용한 6인 팀 프로젝트입니다.<br>
-                                LMS는 교육 과정, 학습 및 개발 프로그램을 관리하고, 기록하고, 종합 보고서를 
+                                LMS는 학습관리 시스템이므로
                             </p>
                         </li>
-                        <br><br>
+                        <br><hr><br>
                         <div>
                             <h3>개인 프로젝트</h3>
                         </div>
@@ -90,16 +90,18 @@
                             </span>
                             <p style="text-align: left;">
                                 <h3>cash 프로젝트</h3>
-                                <a href="https://github.com/YHo141/cash" target="_blank">[GitHub 주소]</a>
+                                <a href="https://github.com/YHo141/cash" target="_blank">[GitHub 주소]</a><a href="http://dragonho.kro.kr/cash/" target="_blank">[cash]</a>
                                 <hr>
                                 프로젝트 방식 : Spring MVC
                                 <br>
                                 사용 프로그램 : Eclipse, Spring-tool-suite, Mariadb
                                 <hr>
-                                Spring Boot, Mybatis, RestController, AJax등을 활용한 가계부 프로그램으로 자바 웹 프레임워크 수업 후 2주일간 진행한 프로젝트입니다.
+                                Spring Boot, Mybatis, RestController, AJax등을 활용한 가계부 프로그램으로 자바 웹 프레임워크 수업 후 2주일간 진행한 프로젝트입니다.<br>
+                                캘린더 API를 사용한 달력으로 수입, 지출을 기록하는 가계부, 공지사항, 사용자 추가, 차트 기능이 있습니다.<br>
+                                차트 기능은 chart.js에서 ajax를 통해 비동기로 구현했습니다.
                             </p>
                         </li>
-                        <hr>
+                        <hr><br>
                         <!-- mall 프로젝트(사용자) -->
                         <li class="style3">
                             <span class="image">
@@ -109,16 +111,17 @@
                             </span>
                             <p style="text-align: left;">
                                 <h3>mall 프로젝트(사용자)</h3>
-                                <a href="https://github.com/YHo141/mall" target="_blank">[GitHub 주소]</a>
+                                <a href="https://github.com/YHo141/mall" target="_blank">[GitHub 주소]</a><a href="http://dragonho.kro.kr/mall/login/login.jsp" target="_blank">[mall]</a>
                                 <hr>
                                 프로젝트 방식 : Model 1
                                 <br>
                                 사용 프로그램 : Eclipse, Mariadb
                                 <hr>
-                                Model 1 기법으로 만든 쇼핑몰 프로젝트로 Servlet, Filter, Listener, Session, RDBMS 수업 후 일주일간 진행한 미니프로젝트입니다.<br>
+                                Model 1 기법으로 처음 만든 프로젝트로 Servlet, Filter, Listener, Session, RDBMS 수업 후 일주일간 진행한 프로젝트입니다.<br>
+                                일반 쇼핑몰처럼 로그인, 회원가입, 각종 상품 구매, 주문 내역 확인하는 기능들이 있는 쇼핑몰 페이지입니다.
                             </p>
                         </li>
-                        <hr>
+                        <hr><br>
                         <!-- mall 프로젝트(관리자) -->
                         <li class="style3">
                             <span class="image">
@@ -128,13 +131,15 @@
                             </span>
                             <p style="text-align: left;">
                                 <h3>mall 프로젝트(관리자)</h3>
-                                <a href="https://github.com/YHo141/mall-admin" target="_blank">[GitHub 주소]</a>
+                                <a href="https://github.com/YHo141/mall-admin" target="_blank">[GitHub 주소]</a><a href="http://dragonho.kro.kr/mall-admin/login.jsp" target="_blank">[mall-admin]</a>
                                 <hr>
                                 프로젝트 방식 : Model 1
                                 <br>
                                 사용 프로그램 : Eclipse, Mariadb
                                 <hr>
-                                Model 1 기법으로 만든 쇼핑몰 프로젝트로 Servlet, Filter, Listener, Session, RDBMS 수업 후 일주일간 진행한 미니프로젝트입니다.<br>
+                                Model 1 기법으로 처음 만든 프로젝트로 Servlet, Filter, Listener, Session, RDBMS 수업 후 일주일간 진행한 프로젝트입니다.<br>
+                                쇼핑몰을 관리하는 관리자 페이지이며 회원 관리, 카테고리 관리, 상품 관리, 주문내역 관리, 공지사항 관리 할 수 있는<br>
+                                쇼핑몰 관리자페이지 입니다.
                             </p>
                         </li>
                     </ul>
@@ -148,34 +153,12 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0"> 
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
                         </li>
                     </ul>
                 </div>
