--- a/index.html
+++ b/index.html
@@ -148,19 +148,28 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0"> 
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                    </ul>
+                    <table>
+                        <tr>
+                            <th>Language</th>
+                            <td>Java, JSP, HTML, CSS, JavaScript, python</td>
+                        </tr>
+                        <tr>
+                            <th>Front-End</th>
+                            <td>jquery, ajax, bootstrap, JSTL</td>
+                        </tr>
+                        <tr>
+                            <th>Back-End</th>
+                            <td>Spring, MyBatis</td>
+                        </tr>
+                        <tr>
+                            <th>DataBase</th>
+                            <td>Oracle, Mariadb, MySQL</td>
+                        </tr>
+                        <tr>
+                            <th>Tool</th>
+                            <td>Eclipse, HeidiSQL, Vscode, Visual Studio, Github</td>
+                        </tr>
+                    </table>
                 </div>
             </section>
             <hr class="m-0" />
