--- a/index.html
+++ b/index.html
@@ -150,24 +150,24 @@
                 <div class="resume-section-content">
                     <table>
                         <tr>
-                            <th>Language</th>
-                            <td>Java, JSP, HTML, CSS, JavaScript, python</td>
+                            <th style="font-size: 2.0em; text-align: center;">Language</th>
+                            <td style="font-size: 2.0em;">Java, JSP, HTML, CSS, JavaScript, python</td>
                         </tr>
                         <tr>
-                            <th>Front-End</th>
-                            <td>jquery, ajax, bootstrap, JSTL</td>
+                            <th style="font-size: 2.0em; text-align: center;">Front-End</th>
+                            <td style="font-size: 2.0em;">jquery, ajax, bootstrap, JSTL</td>
                         </tr>
                         <tr>
-                            <th>Back-End</th>
-                            <td>Spring, MyBatis</td>
+                            <th style="font-size: 2.0em; text-align: center;">Back-End</th>
+                            <td style="font-size: 2.0em;">Spring, MyBatis</td>
                         </tr>
                         <tr>
-                            <th>DataBase</th>
-                            <td>Oracle, Mariadb, MySQL</td>
+                            <th style="font-size: 2.0em; text-align: center;">DataBase</th>
+                            <td style="font-size: 2.0em;">Oracle, Mariadb, MySQL</td>
                         </tr>
                         <tr>
-                            <th>Tool</th>
-                            <td>Eclipse, HeidiSQL, Vscode, Visual Studio, Github</td>
+                            <th style="font-size: 2.0em; text-align: center;">Tool</th>
+                            <td style="font-size: 2.0em;">Eclipse, HeidiSQL, Vscode, Visual Studio, Github</td>
                         </tr>
                     </table>
                 </div>
