--- a/index.html
+++ b/index.html
@@ -148,26 +148,27 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
+                    <h2 class="mb-5">Skills</h2>
                     <table>
                         <tr>
-                            <th style="font-size: 2.0em; text-align: center;">Language</th>
-                            <td style="font-size: 2.0em;">Java, JSP, HTML, CSS, JavaScript, python</td>
+                            <th style="font-size: 1.7em; text-align: left;">Language</th>
+                            <td style="font-size: 1.7em; text-align: center;">Java, JSP, HTML, CSS, JavaScript, python</td>
                         </tr>
                         <tr>
-                            <th style="font-size: 2.0em; text-align: center;">Front-End</th>
-                            <td style="font-size: 2.0em;">jquery, ajax, bootstrap, JSTL</td>
+                            <th style="font-size: 1.7em; text-align: left;">Front-End</th>
+                            <td style="font-size: 1.7em; text-align: center;">jquery, ajax, bootstrap, JSTL</td>
                         </tr>
                         <tr>
-                            <th style="font-size: 2.0em; text-align: center;">Back-End</th>
-                            <td style="font-size: 2.0em;">Spring, MyBatis</td>
+                            <th style="font-size: 1.7em; text-align: left;">Back-End</th>
+                            <td style="font-size: 1.7em; text-align: center;">Spring, MyBatis</td>
                         </tr>
                         <tr>
-                            <th style="font-size: 2.0em; text-align: center;">DataBase</th>
-                            <td style="font-size: 2.0em;">Oracle, Mariadb, MySQL</td>
+                            <th style="font-size: 1.7em; text-align: left;">DataBase</th>
+                            <td style="font-size: 1.7em; text-align: center;">Oracle, Mariadb, MySQL</td>
                         </tr>
                         <tr>
-                            <th style="font-size: 2.0em; text-align: center;">Tool</th>
-                            <td style="font-size: 2.0em;">Eclipse, HeidiSQL, Vscode, Visual Studio, Github</td>
+                            <th style="font-size: 1.7em; text-align: left;">Tool</th>
+                            <td style="font-size: 1.7em; text-align: center;">Eclipse, HeidiSQL, Vscode, Visual Studio, Github</td>
                         </tr>
                     </table>
                 </div>
