--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </section>
             <hr class="m-0" />
             <!-- Skills-->
-            <section class="resume-section" id="skills">
+            <section class="resume-section" id="skills" style="margin: 1.0em;">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <table>
