--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <section class="resume-section" id="skills" style="text-align: center;">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <table>
+                    <table style="text-align: center;">
                         <tr>
                             <th style="font-size: 1.7em; text-align: left;">Language</th>
                             <td style="font-size: 1.7em; text-align: center;">Java, JSP, HTML, CSS, JavaScript, python</td>
