--- a/index.html
+++ b/index.html
@@ -149,26 +149,14 @@
             <section class="resume-section" id="skills" style="text-align: center;">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <table style="text-align: center;">
+                    <table class="table table" style="text-align: center;">
                         <tr>
-                            <th style="font-size: 1.7em; text-align: left;">Language</th>
+                            <th style="font-size: 1.7em; text-align: left;">학교</th>
                             <td style="font-size: 1.7em; text-align: center;">Java, JSP, HTML, CSS, JavaScript, python</td>
                         </tr>
                         <tr>
-                            <th style="font-size: 1.7em; text-align: left;">Front-End</th>
+                            <th style="font-size: 1.7em; text-align: left;">학원</th>
                             <td style="font-size: 1.7em; text-align: center;">jquery, ajax, bootstrap, JSTL</td>
-                        </tr>
-                        <tr>
-                            <th style="font-size: 1.7em; text-align: left;">Back-End</th>
-                            <td style="font-size: 1.7em; text-align: center;">Spring, MyBatis</td>
-                        </tr>
-                        <tr>
-                            <th style="font-size: 1.7em; text-align: left;">DataBase</th>
-                            <td style="font-size: 1.7em; text-align: center;">Oracle, Mariadb, MySQL</td>
-                        </tr>
-                        <tr>
-                            <th style="font-size: 1.7em; text-align: left;">Tool</th>
-                            <td style="font-size: 1.7em; text-align: center;">Eclipse, HeidiSQL, Vscode, Visual Studio, Github</td>
                         </tr>
                     </table>
                 </div>
