--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>포트폴리오</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -148,6 +148,7 @@
             <!-- Skills-->
             <section class="resume-section" id="skills" style="text-align: center;">
                 <div class="resume-section-content">
+                    <div class="container">
                     <h2 class="mb-5">Skills</h2>
                     <table class="table table" style="text-align: center;">
                         <tr>
@@ -159,6 +160,7 @@
                             <td style="font-size: 1.7em; text-align: center;">java, jsp, javaScript, CSS, HTML</td>
                         </tr>
                     </table>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
