--- a/index.html
+++ b/index.html
@@ -146,9 +146,8 @@
             </section>
             <hr class="m-0" />
             <!-- Skills-->
-            <section class="resume-section" id="skills" style="text-align: center;">
-                <div class="resume-section-content">
-                    <div class="container">
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content" style="text-align: center;">
                     <h2 class="mb-5">Skills</h2>
                     <table class="table table" style="text-align: center;">
                         <tr>
@@ -160,7 +159,6 @@
                             <td style="font-size: 1.7em; text-align: center;">java, jsp, javaScript, CSS, HTML</td>
                         </tr>
                     </table>
-                    </div>
                 </div>
             </section>
             <hr class="m-0" />
