--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
                     <h2 class="mb-5">Skills</h2>
                     <table class="table table" style="text-align: center;">
                         <tr>
-                            <th style="font-size: 1.7em; text-align: left;">학교</th>
+                            <th style="font-size: 1.7em; text-align: center;">학교</th>
                             <td style="font-size: 1.7em; text-align: center;">C, 아두이노, 라즈베리파이</td>
                         </tr>
                         <tr>
-                            <th style="font-size: 1.7em; text-align: left;">학원</th>
+                            <th style="font-size: 1.7em; text-align: center;">학원</th>
                             <td style="font-size: 1.7em; text-align: center;">java, jsp, javaScript, CSS, HTML</td>
                         </tr>
                     </table>
