LMS 프로젝트 내용 추가

--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
                                 사용 프로그램 : Eclipse, Spring-tool-suite, Mariadb
                                 <hr>
                                 LMS 프로젝트로 기획, 설계, 구현, 테스트 포함 2개월 동안 Spring Boot를 이용한 6인 팀 프로젝트입니다.<br>
-                                LMS는 학습관리 시스템이므로
+                                LMS는 학습관리 시스템이므로 관리자, 운영자, 강사, 학생파트로 나누어져 있으며 관리자는 운영자의 회원가입 승인만 가능하고<br>
+                                운영자는 강의 신청을 승인하고 학생, 강사의 회원가입을 승인, 거절을 할 수 있도록 구성되어 있습니다.<br>
+                                강사는 강의 관련자료를 올리고 학생에게 과제를 제출을 할 수 있으면 학생 출석관리를 할 수 있고 학생은 수강신청, 강의 관련 작업과<br>
+                                수료하기전 최종 평가를 볼 수 있도록 구성되어 있습니다.
+                                전체적으로 스케줄러를 사용하여 휴면계정을 만들었고 Filter를 적용시켜 보안성을 강화 시켰습니다.
                             </p>
                         </li>
                         <br><hr><br>
