이미지 수정

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <li class="style3">
                             <span class="image">
                                 <a href="http://legend-by.kro.kr/lms/" target="_blank">
-                                    <img style="width: auto; height: auto; max-width: 50em; max-height:30em;" src="img/test.PNG" alt="" />
+                                    <img style="width: auto; height: auto; max-width: 50em; max-height:30em;" src="img/LMS.PNG" alt="" />
                                 </a>
                             </span>
                             <p style="text-align: left;">
