--- a/index.html
+++ b/index.html
@@ -52,6 +52,75 @@
                 </div>
             </section>
             <hr class="m-0" />
+            <!-- 학력 -->
+            <section id="resume" class="resume">
+                <div class="container">
+                  <div class="section-title">
+                    <h2>My Education && External activities && License</h2>
+                    <h4>학력과 대외활동 및 자격증에 대한 설명입니다.</h4>
+                  </div>
+          
+                  <div class="row">
+                    <div class="col-lg-6" data-aos="fade-up">
+                      <h3 class="resume-title">Education</h3>
+                      <!--고등학교-->
+                      <div class="resume-item">
+                        <h4>문정고등학교</h4>
+                        <h5>2014 - 2017</h5>
+                        <p>인문계 문정고등학교 졸업</p>
+                        <p></p>
+                      </div>
+                      <!--대학교-->
+                      <div class="resume-item">
+                        <h4>울산과학대학교</h4>
+                        <h5>2017 - 2021</h5>
+                        <p>컴퓨터공학과 졸업</p>
+                        <ul>
+                          <li>대학교에서 C, 아두이노, 라즈베리파이를 배웠습니다.</li>
+                          <li>Language:<br/>
+                             - C <br/>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                      <h3 class="resume-title">External activities && License</h3>
+                        <!--구디아카데미-->
+                        <div class="resume-item">
+                          <h4>운전면허 자격증</h4>
+                          <h5>2014.02</h5>
+                          <p></p>
+                          <p>
+                          </p>
+                        </div>
+                      <div class="resume-item">
+                        <h4>구디 아카데미</h4>
+                        <h5>2021.02</h5>
+                        <p>핀테크 기반 자바개발자 양성과정 수료</p>
+                        <ul>
+                          <li>주로 웹 프로그래밍에 필요한 Front End 기술에는 html,css,JavaScript(jquery),jstl,thymleaf를 배웠으며 Back End 기술에는 Java,Jsp,Spring Framwork를 배웠습니다.그리고 데이터베이스로 Mysql과 mariaDB를 사용하였습니다.</li>
+                          <li>Language:<br/>
+                             - Java : 객체지향설계, JSP, Servlet, Spring, Spring Security,JPA, Mybatis, REST API<br/>
+                             - Python : Pandas, Flask<br/>
+                             - Javascript : Node, Express, JQuery, ChartJS, Ajax<br/>
+                             - CSS : Bootstrap
+                          </li>
+                          <li>DataBase(DB):<br/>
+                            - RDBMS 데이터 모델링, SQL, Oracle, Mysql, Mariadb
+                          </li>
+                          <li>Project tool:<br/>
+                            - Eclipst, Visual Studio Code, Git, Github, Maven
+                          </li>
+                          <li>Cloud:<br/>
+                            - Amazon Web Services, Ubuntu, Tomcat
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section><!-- End Resume Section -->
+
             <!-- 프로젝트 -->
             <section class="resume-section" id="project">
                 <!-- LMS 프로젝트 -->
