--- a/index.html
+++ b/index.html
@@ -56,24 +56,22 @@
             <section id="resume" class="resume">
                 <div class="container">
                   <div class="section-title">
-                    <h2>My Education && External activities && License</h2>
-                    <h4>학력과 대외활동 및 자격증에 대한 설명입니다.</h4>
+                    <h2>학력</h2>
                   </div>
-          
                   <div class="row">
                     <div class="col-lg-6" data-aos="fade-up">
                       <h3 class="resume-title">Education</h3>
                       <!--고등학교-->
                       <div class="resume-item">
-                        <h4>문정고등학교</h4>
-                        <h5>2014 - 2017</h5>
-                        <p>인문계 문정고등학교 졸업</p>
+                        <h4>울산고등학교</h4>
+                        <h5>2013 - 2016</h5>
+                        <p>울산고등학교 졸업</p>
                         <p></p>
                       </div>
                       <!--대학교-->
                       <div class="resume-item">
                         <h4>울산과학대학교</h4>
-                        <h5>2017 - 2021</h5>
+                        <h5>2016 - 2021</h5>
                         <p>컴퓨터공학과 졸업</p>
                         <ul>
                           <li>대학교에서 C, 아두이노, 라즈베리파이를 배웠습니다.</li>
