LMS프로젝트 PDF 다운도드

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 <h3>LMS 프로젝트</h3>
                                 <a href="https://github.com/goodee-project/LMS-Z" target="_blank">[GitHub 주소]</a>
                                 <a href="http://legend-by.kro.kr/lms/" target="_blank">[LMS]</a>
-                                <a href="ppt/project_ppt.pdf" target="_blank" download="ppt/project_ppt.pdf">[LMS프로젝트 PPT]</a>
+                                <a href="src/assets/ppt/project_ppt.pdf" target="_blank" download>[LMS프로젝트 PPT]</a>
                                 <hr>
                                 프로젝트 방식 : Spring MVC
                                 <br>
