LMS프로젝트 링크 수정

--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
                         </div>
                         <li class="style3">
                             <span class="image">
-                                <a href="http://legend-by.kro.kr/lms/" target="_blank">
+                                <a href="http://legend-by.kro.kr/lms/studentLogin#" target="_blank">
                                     <img style="width: auto; height: auto; max-width: 50em; max-height:30em;" src="img/LMS.PNG" alt="" />
                                 </a>
                             </span>
                             <p style="text-align: left;">
                                 <h3>LMS 프로젝트</h3>
                                 <a href="https://github.com/goodee-project/LMS-Z" target="_blank">[GitHub 주소]</a>
-                                <a href="http://legend-by.kro.kr/lms/" target="_blank">[LMS]</a>
+                                <a href="http://legend-by.kro.kr/lms/studentLogin#" target="_blank">[LMS]</a>
                                 <a href="src/assets/ppt/project_ppt.pdf" target="_blank" download>[LMS프로젝트 PPT]</a>
                                 <hr>
                                 프로젝트 방식 : Spring MVC
