진행기간 추가

--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
                                 <a href="http://legend-by.kro.kr/lms/studentLogin#" target="_blank">[LMS]</a>
                                 <a href="src/assets/ppt/project_ppt.pdf" target="_blank" download>[LMS프로젝트 PPT]</a>
                                 <hr>
+                                진행기간 : 2020.12.14 - 2021.01.15(5주)
+                                <br>
                                 프로젝트 방식 : Spring MVC
                                 <br>
                                 사용 프로그램 : Eclipse, Spring-tool-suite, Mariadb
@@ -165,6 +167,8 @@
                                 <h3>cash 프로젝트</h3>
                                 <a href="https://github.com/YHo141/cash" target="_blank">[GitHub 주소]</a><a href="http://dragonho.kro.kr/cash/" target="_blank">[cash]</a>
                                 <hr>
+                                진행기간 : 2020.11.06 - 2020.11.26(3주)
+                                <br>
                                 프로젝트 방식 : Spring MVC
                                 <br>
                                 사용 프로그램 : Eclipse, Spring-tool-suite, Mariadb
@@ -186,6 +190,8 @@
                                 <h3>mall 프로젝트(사용자)</h3>
                                 <a href="https://github.com/YHo141/mall" target="_blank">[GitHub 주소]</a><a href="http://dragonho.kro.kr/mall/login/login.jsp" target="_blank">[mall]</a>
                                 <hr>
+                                진행기간 : 2020.10.01 - 2020.10.13(2주)
+                                <br>
                                 프로젝트 방식 : Model 1
                                 <br>
                                 사용 프로그램 : Eclipse, Mariadb
@@ -206,6 +212,8 @@
                                 <h3>mall 프로젝트(관리자)</h3>
                                 <a href="https://github.com/YHo141/mall-admin" target="_blank">[GitHub 주소]</a><a href="http://dragonho.kro.kr/mall-admin/login.jsp" target="_blank">[mall-admin]</a>
                                 <hr>
+                                진행기간 : 2020.09.16 - 2020.09.30(2주)
+                                <br>
                                 프로젝트 방식 : Model 1
                                 <br>
                                 사용 프로그램 : Eclipse, Mariadb
